added two papers and news; changed avator;

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,12 +2,35 @@
 ---
 
 @string{aps = {American Physical Society,}}
+@string{cvpr = {IEEE Conference on Computer Vision and Pattern Recognition}}
+@string{icml = {International Conference on Machine Learning}}
+
+
+@inproceedings{ding2022understanding,
+  abbr={ICML 2022},
+  title={Understanding Doubly Stochastic Clustering},
+  author={Ding, Tianjiao and Lim, Derek and Vidal, Ren{\'e} and Haeffele, Benjamin D.},
+  booktitle=icml,
+  img={ICML22-doubly-stochastic-clustering.png},
+  year={2022},
+  selected={true}
+}
+
+@inproceedings{baek2022efficient,
+  abbr={CVPR 2022},
+  title={Efficient Maximal Coding Rate Reduction by Variational Forms},
+  author={Baek, Christina and Wu, Ziyang and Chan, Kwan Ho Ryan and Ding, Tianjiao and Ma, Yi and Haeffele, Benjamin D.},
+  booktitle=cvpr,
+  pdf={https://arxiv.org/pdf/2204.00077.pdf},
+  selected={true},
+  year={2022}
+}
 
 @inproceedings{ding2020robust,
   abbr={CVPR 2020},
   title={Robust Homography Estimation via Dual Principal Component Pursuit},
   author={Ding, Tianjiao and Yang, Yunchen and Zhu, Zhihui and Robinson, Daniel P. and Vidal, Ren{\'e} and Kneip, Laurent and Tsakiris, Manolis C.},
-  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
+  booktitle=cvpr,
   pages={6080--6089},
   year={2020},
   img={CVPR20-dpcp-homo.gif},
@@ -20,7 +43,7 @@
   abbr={ICML 2019},
   title={Noisy Dual Principal Component Pursuit},
   author={Ding, Tianyu and Zhu, Zhihui and Ding, Tianjiao and Yang, Yunchen and Robinson, Daniel P. and Tsakiris, Manolis C. and Vidal, Ren{\'e}},
-  booktitle={the 36th International Conference on Machine Learning},
+  booktitle=icml,
   pages={1617--1625},
   year={2019},
   img={ICML19-dpcp.png},
@@ -33,7 +56,7 @@
   abbr={CVPR},
   title={Learning to parse wireframes in images of man-made environments},
   author={Huang, Kun and Wang, Yifan and Zhou, Zihan and Ding, Tianjiao and Gao, Shenghua and Ma, Yi},
-  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
+  booktitle=cvpr,
   pages={626--635},
   year={2018},
   img={CVPR18-wireframe.jpg},
