added pdf links and images for papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   title={Understanding Doubly Stochastic Clustering},
   author={Ding, Tianjiao and Lim, Derek and Vidal, Ren{\'e} and Haeffele, Benjamin D.},
   booktitle=icml,
+  pdf={https://proceedings.mlr.press/v162/ding22a/ding22a.pdf},
   img={ICML22-doubly-stochastic-clustering.png},
   year={2022},
   selected={true}
@@ -22,6 +23,7 @@
   author={Baek, Christina and Wu, Ziyang and Chan, Kwan Ho Ryan and Ding, Tianjiao and Ma, Yi and Haeffele, Benjamin D.},
   booktitle=cvpr,
   pdf={https://arxiv.org/pdf/2204.00077.pdf},
+  img={CVPR22-mcr2-variational.png},
   selected={true},
   year={2022}
 }
