added papers in 2023

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,31 @@
 @string{aps = {American Physical Society,}}
 @string{cvpr = {IEEE Conference on Computer Vision and Pattern Recognition}}
 @string{icml = {International Conference on Machine Learning}}
+@string{iccv = {International Conference on Computer Vision}}
 
+
+@inproceedings{ding2023hard,
+  abbr={CPAL 2024},
+  title={HARD: Hyperplane ARrangement Descent},
+  author={Ding*, Tianjiao and Peng*, Liangzu and Vidal, Ren{\'e}},
+  booktitle={Conference on Parsimony and Learning (Proceedings Track)},
+  pdf={https://openreview.net/attachment?id=jMUDBpnZPa&name=pdf},
+  img={CPAL24-hard.gif},
+  year={2024},
+  selected={true}
+}
+
+
+@inproceedings{ding2023unsupervised,
+  abbr={ICCV 2023},
+  title={Unsupervised Manifold Linearizing and Clustering},
+  author={Ding, Tianjiao and Tong, Shengbang and Chan, Kwan Ho Ryan and Dai, Xili and Ma, Yi and Haeffele, Benjamin D.},
+  booktitle=iccv,
+  pdf={https://arxiv.org/pdf/2301.01805.pdf},
+  img={ICCV23-mcr2-clustering.png},
+  year={2023},
+  selected={true}
+}
 
 @inproceedings{ding2022understanding,
   abbr={ICML 2022},
