added paper code; revised my affiliation

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,7 @@
   author={Ding*, Tianjiao and Peng*, Liangzu and Vidal, Ren{\'e}},
   booktitle={Conference on Parsimony and Learning (Proceedings Track)},
   pdf={https://openreview.net/attachment?id=jMUDBpnZPa&name=pdf},
+  code={https://github.com/tianjiaoding/hard},
   img={CPAL24-hard.gif},
   year={2024},
   selected={true}
