added new papers; updated bio

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,14 +5,25 @@
 @string{cvpr = {IEEE Conference on Computer Vision and Pattern Recognition}}
 @string{icml = {International Conference on Machine Learning}}
 @string{iccv = {International Conference on Computer Vision}}
+@string{iclr = {International Conference on Learning Representations}}
 
+@inproceedings{chu2024image,
+  title={Image Clustering via the Principle of Rate Reduction in the Age of Pretrained Models},
+  author={Chu*, Tianzhe and Tong*, Shengbang and Ding*, Tianjiao and Dai, Xili and Haeffele, Benjamin D. and Vidal, Ren{\'e} and Ma, Yi},
+  img={ICLR24-mlc-clip.png},
+  pdf={https://openreview.net/pdf?id=ptCIlV24YZ},
+  code={https://github.com/LeslieTrue/CPP},
+  booktitle=iclr,
+  year={2024},
+  selected={true}
+}
 
 @inproceedings{ding2023hard,
   abbr={CPAL 2024},
   title={HARD: Hyperplane ARrangement Descent},
   author={Ding*, Tianjiao and Peng*, Liangzu and Vidal, Ren{\'e}},
-  booktitle={Conference on Parsimony and Learning (Proceedings Track)},
-  pdf={https://openreview.net/attachment?id=jMUDBpnZPa&name=pdf},
+  booktitle={Conference on Parsimony and Learning (Oral)},
+  pdf={https://proceedings.mlr.press/v234/ding24a/ding24a.pdf},
   code={https://github.com/tianjiaoding/hard},
   img={CPAL24-hard.gif},
   year={2024},
