migrated changes from old repo to new one

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,111 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
+@string{cvpr = {IEEE Conference on Computer Vision and Pattern Recognition}}
+@string{icml = {International Conference on Machine Learning}}
+@string{iccv = {International Conference on Computer Vision}}
+@string{iclr = {International Conference on Learning Representations}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+@inproceedings{chu2024image,
+  title={Image Clustering via the Principle of Rate Reduction in the Age of Pretrained Models},
+  author={Chu*, Tianzhe and Tong*, Shengbang and Ding*, Tianjiao and Dai, Xili and Haeffele, Benjamin D. and Vidal, Ren{\'e} and Ma, Yi},
+  preview={ICLR24-mlc-clip.png},
+  pdf={https://openreview.net/pdf?id=ptCIlV24YZ},
+  code={https://github.com/LeslieTrue/CPP},
+  booktitle=iclr,
+  year={2024},
   selected={true},
-  inspirehep_id = {3255}
+  annotation={* Equal contribution},
+  bibtex_show={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{ding2023hard,
+  title={HARD: Hyperplane ARrangement Descent},
+  author={Ding*, Tianjiao and Peng*, Liangzu and Vidal, Ren{\'e}},
+  booktitle={Conference on Parsimony and Learning},
+  pdf={https://proceedings.mlr.press/v234/ding24a/ding24a.pdf},
+  code={https://github.com/tianjiaoding/hard},
+  preview={CPAL24-hard.gif},
+  year={2024},
+  award={Oral presentation},
+  award_name={Oral},
+  selected={true},
+  bibtex_show={true}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@inproceedings{ding2023unsupervised,
+  title={Unsupervised Manifold Linearizing and Clustering},
+  author={Ding, Tianjiao and Tong, Shengbang and Chan, Kwan Ho Ryan and Dai, Xili and Ma, Yi and Haeffele, Benjamin D.},
+  booktitle=iccv,
+  pdf={https://arxiv.org/pdf/2301.01805.pdf},
+  preview={ICCV23-mcr2-clustering.png},
+  year={2023},
+  selected={true},
+  bibtex_show={true}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{ding2022understanding,
+  title={Understanding Doubly Stochastic Clustering},
+  author={Ding, Tianjiao and Lim, Derek and Vidal, Ren{\'e} and Haeffele, Benjamin D.},
+  booktitle=icml,
+  pdf={https://proceedings.mlr.press/v162/ding22a/ding22a.pdf},
+  preview={ICML22-doubly-stochastic-clustering.png},
+  year={2022},
+  selected={true},
+  bibtex_show={true}
 }
 
-@Article{einstein1905photoelectriceffect,
+@inproceedings{baek2022efficient,
+  title={Efficient Maximal Coding Rate Reduction by Variational Forms},
+  author={Baek, Christina and Wu, Ziyang and Chan, Kwan Ho Ryan and Ding, Tianjiao and Ma, Yi and Haeffele, Benjamin D.},
+  booktitle=cvpr,
+  pdf={https://arxiv.org/pdf/2204.00077.pdf},
+  preview={CVPR22-mcr2-variational.png},
+  selected={true},
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  year={2022}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{ding2020robust,
+  title={Robust Homography Estimation via Dual Principal Component Pursuit},
+  author={Ding, Tianjiao and Yang, Yunchen and Zhu, Zhihui and Robinson, Daniel P. and Vidal, Ren{\'e} and Kneip, Laurent and Tsakiris, Manolis C.},
+  booktitle=cvpr,
+  pages={6080--6089},
+  year={2020},
+  preview={CVPR20-dpcp-homo.gif},
+  pdf={CVPR20-dpcp-homo.pdf},
+  code={https://github.com/tianjiaoding/DPCP-Homography},
+  selected={true},
+  bibtex_show={true}
 }
+
+@inproceedings{ding2019noisy,
+  title={Noisy Dual Principal Component Pursuit},
+  author={Ding, Tianyu and Zhu, Zhihui and Ding, Tianjiao and Yang, Yunchen and Robinson, Daniel P. and Tsakiris, Manolis C. and Vidal, Ren{\'e}},
+  booktitle=icml,
+  pages={1617--1625},
+  year={2019},
+  preview={ICML19-dpcp.png},
+  pdf={ICML19-dpcp.pdf},
+  code={https://github.com/tding1/Noisy-DPCP},
+  award={Oral presentation},
+  award_name={Oral},
+  selected={true},
+  bibtex_show={true}
+}
+
+@inproceedings{huang2018learning,
+  title={Learning to Parse Wireframes in Images of Man-Made Environments},
+  author={Huang, Kun and Wang, Yifan and Zhou, Zihan and Ding, Tianjiao and Gao, Shenghua and Ma, Yi},
+  booktitle=cvpr,
+  pages={626--635},
+  year={2018},
+  preview={CVPR18-wireframe.jpg},
+  pdf={CVPR18-wireframe.pdf},
+  code={https://github.com/huangkuns/wireframe},
+  selected={true},
+  bibtex_show={true}
+}
+
+
