--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,18 @@
 @string{iccv = {International Conference on Computer Vision}}
 @string{iclr = {International Conference on Learning Representations}}
 
+@inproceedings{luo2024pace,
+  title={PaCE: Parsimonious Concept Engineering for Large Language Models},
+  author={Luo*, Jinqi and Ding*, Tianjiao and Chan, Kwan Ho Ryan and Thaker, Darshan and Chattopadhyay, Aditya and Callison-Burch, Chris and Vidal, Ren{\'e}},
+  preview={Arxiv-pace.png},
+  pdf={https://arxiv.org/pdf/2406.04331.pdf},
+  code={https://github.com/peterljq/Parsimonious-Concept-Engineering},
+  booktitle={arXiv preprint arXiv:2406.04331},
+  year={2024},
+  selected={true},
+  bibtex_show={true}
+}
+
 @inproceedings{chu2024image,
   title={Image Clustering via the Principle of Rate Reduction in the Age of Pretrained Models},
   author={Chu*, Tianzhe and Tong*, Shengbang and Ding*, Tianjiao and Dai, Xili and Haeffele, Benjamin D. and Vidal, Ren{\'e} and Ma, Yi},
