added teaching and PennAI coverage

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,8 @@
   code={https://github.com/peterljq/Parsimonious-Concept-Engineering},
   booktitle={arXiv preprint arXiv:2406.04331},
   year={2024},
+  award={[Penn AI](https://pennai.substack.com/p/july-29-2024-concept-engineering)},
+  award_name={Media},
   selected={true},
   bibtex_show={true}
 }
