updated research interests and neurips papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
 @string{icml = {International Conference on Machine Learning}}
 @string{iccv = {International Conference on Computer Vision}}
 @string{iclr = {International Conference on Learning Representations}}
+@string{neurips = {Annual Conference on Neural Information Processing Systems}}
 
 @inproceedings{luo2024pace,
   title={PaCE: Parsimonious Concept Engineering for Large Language Models},
@@ -14,12 +15,21 @@
   preview={Arxiv-pace.png},
   pdf={https://arxiv.org/pdf/2406.04331.pdf},
   code={https://github.com/peterljq/Parsimonious-Concept-Engineering},
-  booktitle={arXiv preprint arXiv:2406.04331},
+  booktitle=neurips,
   year={2024},
   award={[Penn AI](https://pennai.substack.com/p/july-29-2024-concept-engineering)},
   award_name={Media},
   selected={true},
   bibtex_show={true}
+}
+
+@inproceedings{shinde2024geometric,
+  title={Geometric Analysis of Nonlinear Manifold Clustering},
+  author={Shinde*, Nimita and Ding*, Tianjiao and Robinson, Daniel P. and Vidal, Ren{\'e}},
+  preview={Neurips24-manifold-clustering.png},
+  booktitle=neurips,
+  year={2024},
+  selected={false}
 }
 
 @inproceedings{chu2024image,
