--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,10 +17,9 @@
   code={https://github.com/peterljq/Parsimonious-Concept-Engineering},
   booktitle=neurips,
   year={2024},
-  award={[Penn AI](https://pennai.substack.com/p/july-29-2024-concept-engineering)},
-  award_name={Media},
   selected={true},
-  bibtex_show={true}
+  bibtex_show={true},
+  video={https://www.dropbox.com/scl/fi/7q5onslqqcjuuf7bt9v78/Speaker-Ren-Vidal.mp4?rlkey=0ukz3mbhz8lp0evexw0kbw6zu&e=1&st=dhq8go6o&dl=0}
 }
 
 @inproceedings{shinde2024geometric,
@@ -28,8 +27,12 @@
   author={Shinde*, Nimita and Ding*, Tianjiao and Robinson, Daniel P. and Vidal, Ren{\'e}},
   preview={Neurips24-manifold-clustering.png},
   booktitle=neurips,
+  pdf={https://openreview.net/pdf?id=nBQHTBVnfr},
   year={2024},
-  selected={false}
+  selected={true},
+  bibtex_show={true},
+  award={Reviewer ratings: 8,7,6 out of 10,  [top 117/3650 ≈ 3% of posters](https://papercopilot.com/statistics/neurips-statistics/neurips-2024-statistics/)},
+  award_name={Top 3% posters}
 }
 
 @inproceedings{chu2024image,
@@ -67,6 +70,8 @@
   pdf={https://arxiv.org/pdf/2301.01805.pdf},
   preview={ICCV23-mcr2-clustering.png},
   year={2023},
+  award={CPAL Spotlight},
+  award_name={CPAL Spotlight},
   selected={true},
   bibtex_show={true}
 }
@@ -78,6 +83,8 @@
   pdf={https://proceedings.mlr.press/v162/ding22a/ding22a.pdf},
   preview={ICML22-doubly-stochastic-clustering.png},
   year={2022},
+  award={Oral presentation},
+  award_name={Oral},
   selected={true},
   bibtex_show={true}
 }
@@ -86,7 +93,7 @@
   title={Efficient Maximal Coding Rate Reduction by Variational Forms},
   author={Baek, Christina and Wu, Ziyang and Chan, Kwan Ho Ryan and Ding, Tianjiao and Ma, Yi and Haeffele, Benjamin D.},
   booktitle=cvpr,
-  pdf={https://arxiv.org/pdf/2204.00077.pdf},
+  pdf={https://openaccess.thecvf.com/content/CVPR2022/papers/Baek_Efficient_Maximal_Coding_Rate_Reduction_by_Variational_Forms_CVPR_2022_paper.pdf},
   preview={CVPR22-mcr2-variational.png},
   selected={true},
   bibtex_show={true},
@@ -100,20 +107,21 @@
   pages={6080--6089},
   year={2020},
   preview={CVPR20-dpcp-homo.gif},
-  pdf={CVPR20-dpcp-homo.pdf},
+  pdf={https://openaccess.thecvf.com/content_CVPR_2020/papers/Ding_Robust_Homography_Estimation_via_Dual_Principal_Component_Pursuit_CVPR_2020_paper.pdf},
   code={https://github.com/tianjiaoding/DPCP-Homography},
   selected={true},
-  bibtex_show={true}
+  bibtex_show={true},
+  video={https://www.youtube.com/watch?v=BUUnn-83iLc}
 }
 
 @inproceedings{ding2019noisy,
   title={Noisy Dual Principal Component Pursuit},
-  author={Ding, Tianyu and Zhu, Zhihui and Ding, Tianjiao and Yang, Yunchen and Robinson, Daniel P. and Tsakiris, Manolis C. and Vidal, Ren{\'e}},
+  author={Ding*, Tianyu and Zhu*, Zhihui and Ding, Tianjiao and Yang, Yunchen and Robinson, Daniel P. and Tsakiris, Manolis C. and Vidal, Ren{\'e}},
   booktitle=icml,
   pages={1617--1625},
   year={2019},
   preview={ICML19-dpcp.png},
-  pdf={ICML19-dpcp.pdf},
+  pdf={https://proceedings.mlr.press/v97/ding19b/ding19b.pdf},
   code={https://github.com/tding1/Noisy-DPCP},
   award={Oral presentation},
   award_name={Oral},
@@ -128,7 +136,7 @@
   pages={626--635},
   year={2018},
   preview={CVPR18-wireframe.jpg},
-  pdf={CVPR18-wireframe.pdf},
+  pdf={https://openaccess.thecvf.com/content_cvpr_2018/papers/Huang_Learning_to_Parse_CVPR_2018_paper.pdf},
   code={https://github.com/huangkuns/wireframe},
   selected={true},
   bibtex_show={true}
