--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,10 +9,24 @@
 @string{iclr = {International Conference on Learning Representations}}
 @string{neurips = {Annual Conference on Neural Information Processing Systems}}
 
+@inproceedings{wu2025token,
+  title={Token Statistics Transformer: Linear-Time Attention via Variational Rate Reduction},
+  author={Wu, Ziyang and Ding*, Tianjiao and Lu*, Yifu and Pai, Druv and Zhang, Jingyuan and Wang, Weida and Yu, Yaodong and Ma, Yi and Haeffele, Benjamin D.},
+  preview={arXiv-tost.png},
+  booktitle={Under Review},
+  year={2025},
+  pdf={https://arxiv.org/pdf/2412.17810},
+  award={Reviewer ratings: 8,8,8,6 out of 10, top 162/11670 ≈ 1.4% of all submissions},
+  award_name={Top 1.4% submissions},
+  selected={true},
+  bibtex_show={true}
+}
+
+
 @inproceedings{luo2024pace,
   title={PaCE: Parsimonious Concept Engineering for Large Language Models},
   author={Luo*, Jinqi and Ding*, Tianjiao and Chan, Kwan Ho Ryan and Thaker, Darshan and Chattopadhyay, Aditya and Callison-Burch, Chris and Vidal, Ren{\'e}},
-  preview={Arxiv-pace.png},
+  preview={NeurIPS24-pace.png},
   pdf={https://arxiv.org/pdf/2406.04331.pdf},
   code={https://github.com/peterljq/Parsimonious-Concept-Engineering},
   booktitle=neurips,
@@ -48,7 +62,7 @@
   bibtex_show={true}
 }
 
-@inproceedings{ding2023hard,
+@inproceedings{ding2024hard,
   title={HARD: Hyperplane ARrangement Descent},
   author={Ding*, Tianjiao and Peng*, Liangzu and Vidal, Ren{\'e}},
   booktitle={Conference on Parsimony and Learning},
@@ -62,6 +76,16 @@
   bibtex_show={true}
 }
 
+@inproceedings{ding2023outlier,
+  title={Outlier-Robust Orthogonal Regression on Manifolds},
+  author={Ding*, Tianjiao and Peng*, Liangzu and Vidal, Ren{\'e}},
+  booktitle={OpenReview},
+  pdf={https://openreview.net/pdf?id=5zwrpqYIK5},
+  preview={OpenReview23-or2.png},
+  year={2023},
+  selected={true},
+  bibtex_show={true}
+}
 
 @inproceedings{ding2023unsupervised,
   title={Unsupervised Manifold Linearizing and Clustering},
