fixed issues with annotations of author names

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,8 @@
   award={Reviewer ratings: 8,8,8,6 out of 10, top 162/11670 ≈ 1.4% of all submissions},
   award_name={Top 1.4% submissions},
   selected={true},
-  bibtex_show={true}
+  bibtex_show={true},
+  annotation={* Equal contribution}
 }
 
 
@@ -33,7 +34,8 @@
   year={2024},
   selected={true},
   bibtex_show={true},
-  video={https://www.dropbox.com/scl/fi/7q5onslqqcjuuf7bt9v78/Speaker-Ren-Vidal.mp4?rlkey=0ukz3mbhz8lp0evexw0kbw6zu&e=1&st=dhq8go6o&dl=0}
+  video={https://www.dropbox.com/scl/fi/7q5onslqqcjuuf7bt9v78/Speaker-Ren-Vidal.mp4?rlkey=0ukz3mbhz8lp0evexw0kbw6zu&e=1&st=dhq8go6o&dl=0},
+  annotation={* Equal contribution}
 }
 
 @inproceedings{shinde2024geometric,
@@ -46,7 +48,8 @@
   selected={true},
   bibtex_show={true},
   award={Reviewer ratings: 8,7,6 out of 10,  [top 117/3650 ≈ 3% of posters](https://papercopilot.com/statistics/neurips-statistics/neurips-2024-statistics/)},
-  award_name={Top 3% posters}
+  award_name={Top 3% posters},
+  annotation={* Equal contribution}
 }
 
 @inproceedings{chu2024image,
@@ -73,6 +76,7 @@
   award={Oral presentation},
   award_name={Oral},
   selected={true},
+  annotation={* Equal contribution},
   bibtex_show={true}
 }
 
@@ -84,6 +88,7 @@
   preview={OpenReview23-or2.png},
   year={2023},
   selected={true},
+  annotation={* Equal contribution},
   bibtex_show={true}
 }
 
@@ -115,12 +120,13 @@
 
 @inproceedings{baek2022efficient,
   title={Efficient Maximal Coding Rate Reduction by Variational Forms},
-  author={Baek, Christina and Wu, Ziyang and Chan, Kwan Ho Ryan and Ding, Tianjiao and Ma, Yi and Haeffele, Benjamin D.},
+  author={Baek*, Christina and Wu*, Ziyang and Chan, Kwan Ho Ryan and Ding, Tianjiao and Ma, Yi and Haeffele, Benjamin D.},
   booktitle=cvpr,
   pdf={https://openaccess.thecvf.com/content/CVPR2022/papers/Baek_Efficient_Maximal_Coding_Rate_Reduction_by_Variational_Forms_CVPR_2022_paper.pdf},
   preview={CVPR22-mcr2-variational.png},
   selected={true},
   bibtex_show={true},
+  annotation={* Equal contribution},
   year={2022}
 }
 
@@ -150,6 +156,7 @@
   award={Oral presentation},
   award_name={Oral},
   selected={true},
+  annotation={* Equal contribution},
   bibtex_show={true}
 }
 
