--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,19 @@
 @string{iclr = {International Conference on Learning Representations}}
 @string{neurips = {Annual Conference on Neural Information Processing Systems}}
 
+
+@inproceedings{luo2025concept,
+  title={Concept Lancet: Representation Decomposition and Transplant for Diffusion-Based Image Editing},
+  author={Luo, Jinqi and Ding, Tianjiao and Chan, Kwan Ho Ryan and Min, Hancheng and Callison-Burch, Chris and Vidal, Ren{\'e}},
+  preview={arXiv-colan.png},
+  booktitle={Under Review},
+  year={2025},
+  selected={true},
+  bibtex_show={false},
+  tags={trustworthy-ml;foundation-models;representation-learning}
+}
+
+
 @inproceedings{wu2025token,
   title={Token Statistics Transformer: Linear-Time Attention via Variational Rate Reduction},
   author={Wu, Ziyang and Ding*, Tianjiao and Lu*, Yifu and Pai, Druv and Zhang, Jingyuan and Wang, Weida and Yu, Yaodong and Ma, Yi and Haeffele, Benjamin D.},
@@ -20,7 +33,8 @@
   award_name={Top 1.4% submissions},
   selected={true},
   bibtex_show={true},
-  annotation={* Equal contribution}
+  annotation={* Equal contribution},
+  tags={efficient-ml;optimization;foundation-models;theory}
 }
 
 
@@ -35,7 +49,8 @@
   selected={true},
   bibtex_show={true},
   video={https://www.dropbox.com/scl/fi/7q5onslqqcjuuf7bt9v78/Speaker-Ren-Vidal.mp4?rlkey=0ukz3mbhz8lp0evexw0kbw6zu&e=1&st=dhq8go6o&dl=0},
-  annotation={* Equal contribution}
+  annotation={* Equal contribution},
+  tags={trustworthy-ml;efficient-ml;foundation-models;representation-learning}
 }
 
 @inproceedings{shinde2024geometric,
@@ -49,7 +64,8 @@
   bibtex_show={true},
   award={Reviewer ratings: 8,7,6 out of 10,  [top 117/3650 ≈ 3% of posters](https://papercopilot.com/statistics/neurips-statistics/neurips-2024-statistics/)},
   award_name={Top 3% posters},
-  annotation={* Equal contribution}
+  annotation={* Equal contribution},
+  tags={unsupervised-ml;theory;optimization}
 }
 
 @inproceedings{chu2024image,
@@ -62,7 +78,8 @@
   year={2024},
   selected={true},
   annotation={* Equal contribution},
-  bibtex_show={true}
+  bibtex_show={true},
+  tags={unsupervised-ml;foundation-models;representation-learning}
 }
 
 @inproceedings{ding2024hard,
@@ -77,7 +94,8 @@
   award_name={Oral},
   selected={true},
   annotation={* Equal contribution},
-  bibtex_show={true}
+  bibtex_show={true},
+  tags={trustworthy-ml;unsupervised-ml;theory;optimization}
 }
 
 @inproceedings{ding2023outlier,
@@ -89,7 +107,8 @@
   year={2023},
   selected={true},
   annotation={* Equal contribution},
-  bibtex_show={true}
+  bibtex_show={true},
+  tags={trustworthy-ml;efficient-ml;unsupervised-ml;theory;geometric-vision;optimization}
 }
 
 @inproceedings{ding2023unsupervised,
@@ -102,7 +121,8 @@
   award={CPAL Spotlight},
   award_name={CPAL Spotlight},
   selected={true},
-  bibtex_show={true}
+  bibtex_show={true},
+  tags={unsupervised-ml;representation-learning}
 }
 
 @inproceedings{ding2022understanding,
@@ -115,7 +135,8 @@
   award={Oral presentation},
   award_name={Oral},
   selected={true},
-  bibtex_show={true}
+  bibtex_show={true},
+  tags={unsupervised-ml;trustworthy-ml;optimization;theory}
 }
 
 @inproceedings{baek2022efficient,
@@ -127,7 +148,20 @@
   selected={true},
   bibtex_show={true},
   annotation={* Equal contribution},
-  year={2022}
+  year={2022},
+  tags={efficient-ml;optimization;theory;representation-learning}
+}
+
+@article{yang2021boosting,
+  title={Boosting RANSAC via Dual Principal Component Pursuit},
+  author={Yang, Yunchen and Zhang, Xinyue and Ding, Tianjiao and Robinson, Daniel P. and Vidal, Ren{\'e} and Tsakiris, Manolis C.},
+  journal={arXiv preprint arXiv:2110.02918},
+  year={2021},
+  preview={arXiv21-boosting.png},
+  pdf={https://arxiv.org/pdf/2110.02918.pdf},
+  selected={true},
+  bibtex_show={true},
+  tags={trustworthy-ml;efficient-ml;geometric-vision}
 }
 
 @inproceedings{ding2020robust,
@@ -141,7 +175,8 @@
   code={https://github.com/tianjiaoding/DPCP-Homography},
   selected={true},
   bibtex_show={true},
-  video={https://www.youtube.com/watch?v=BUUnn-83iLc}
+  video={https://www.youtube.com/watch?v=BUUnn-83iLc},
+  tags={trustworthy-ml;efficient-ml;unsupervised-ml;geometric-vision;theory;optimization}
 }
 
 @inproceedings{ding2019noisy,
@@ -157,7 +192,8 @@
   award_name={Oral},
   selected={true},
   annotation={* Equal contribution},
-  bibtex_show={true}
+  bibtex_show={true},
+  tags={unsupervised-ml;efficient-ml;trustworthy-ml;geometric-vision;optimization;theory}
 }
 
 @inproceedings{huang2018learning,
@@ -170,7 +206,8 @@
   pdf={https://openaccess.thecvf.com/content_cvpr_2018/papers/Huang_Learning_to_Parse_CVPR_2018_paper.pdf},
   code={https://github.com/huangkuns/wireframe},
   selected={true},
-  bibtex_show={true}
+  bibtex_show={true},
+  tags={efficient-ml;geometric-vision;representation-learning}
 }
 
 
